[tool.poetry]
name = "repl_python3_cs9-comparsions-if-elif-else-assignment-Jxde1"
version = "0.1.0"
description = ""
authors = ["JadeLi4 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
choice = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
